--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ body{
     background-color: royalblue;
     height: 100%;
     width: 100%;
+    
 }
 button{
     width: 50px;
@@ -26,6 +27,7 @@ header{
     background-color: white;
     display: flex;
     flex-direction: column ;
+    border:2px solid black;
   
 }
 .board .row{
@@ -33,6 +35,7 @@ header{
     width: 100%;
     min-height: 50px;
     display: flex;
+    border:1px solid black;
     
 
 
@@ -43,6 +46,7 @@ header{
     min-width: 50px;
     min-height: 50px;
     flex-grow: 1;
+    border:1px solid black;
     
 
 
